--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -45,7 +45,7 @@
 }
 
 .job-card{
-  @apply w-full h-max flex bg-white shadow-bottom-black border-solid border-black border-2 rounded-xl p-2 mb-4;
+  @apply w-full h-[150px] flex bg-white shadow-bottom-black border-solid border-black border-2 rounded-xl p-2 mb-4;
 }
 
 .status-box{
