--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -22,6 +22,7 @@ body {
   width: 100%;
   height: 100%;
   font-family: modern-tech;
+  overflow: hidden;
   display: flex;
   align-items: center;
 }
