--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -5,10 +5,11 @@
 .App {
   text-align: center;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 100%;
+  height: fit-content;
 }
 
 
